--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,10 +5,7 @@ services:
     container_name: next-app
     build:
       context: .
-      dockerfile: Dockerfile
-      args:
-        ENV_VARIABLE: ${ENV_VARIABLE}
-        NEXT_PUBLIC_ENV_VARIABLE: ${NEXT_PUBLIC_ENV_VARIABLE}
+      dockerfile: prod.Dockerfile
     restart: always
     ports:
       - 3000:3000
